--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@
 
 *.tlog
 /matrix/.vs/matrix/v15
+/matrix/matrix.v11.suo
+/matrix/matrix.sln
+/matrix/matrix.sdf
+/matrix/matrix/matrix.vcxproj.user
+/matrix/matrix/matrix.vcxproj.filters
+/matrix/matrix/matrix.vcxproj
+/matrix/matrix/Debug/vc110.pdb
+/matrix/matrix/Debug/vc110.idb
+/matrix/matrix/Debug/test.obj
+/matrix/matrix/Debug/stdafx.obj
+/matrix/matrix/Debug/specialmat.obj
+/matrix/matrix/Debug/mymatrix.obj
+/matrix/matrix/Debug/ml.obj
+/matrix/matrix/Debug/matrix.pch
+/matrix/matrix/Debug/matrix.obj
+/matrix/matrix/Debug/matrix.log
+/matrix/matrix/Debug/matrix.lastbuildstate
+/matrix/matrix/Debug/matrix.Build.CppClean.log
+/matrix/matrix/Debug/matlab.obj
+/matrix/matrix/Debug/exception.obj
+/matrix/matrix/.vscode/launch.json
+/matrix/matrix/.vscode/c_cpp_properties.json
+/matrix/ipch/matrix-ed3d8abd/matrix-f2a09fe1.ipch
+/matrix/Debug/matrix.pdb
+/matrix/Debug/matrix.ilk
+/matrix/Debug/matrix.exe
