--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 /matrix/Debug/matrix.pdb
 /matrix/Debug/matrix.ilk
 /matrix/Debug/matrix.exe
+/matrix/matrix/Debug/vc.nativecodeanalysis.all.xml
+/matrix/matrix/Debug/test.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/stdafx.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/specialmat.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/mymatrix.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/ml.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/matrix.pch.codeanalysisast
+/matrix/matrix/Debug/matrix.pch.codeanalysis
+/matrix/matrix/Debug/matrix.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/matlab.cpp.nativecodeanalysis.xml
+/matrix/matrix/Debug/exception.cpp.nativecodeanalysis.xml
+/matrix/Debug/matrix.exe.lastcodeanalysissucceeded
