update file structures

--- a/.gitignore
+++ b/.gitignore
@@ -2,54 +2,4 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-*.tlog
-/matrix/.vs/matrix/v15
-/matrix/matrix.v11.suo
-/matrix/matrix.sln
-/matrix/matrix.sdf
-/matrix/matrix/matrix.vcxproj.user
-/matrix/matrix/matrix.vcxproj.filters
-/matrix/matrix/matrix.vcxproj
-/matrix/matrix/Debug/vc110.pdb
-/matrix/matrix/Debug/vc110.idb
-/matrix/matrix/Debug/test.obj
-/matrix/matrix/Debug/stdafx.obj
-/matrix/matrix/Debug/specialmat.obj
-/matrix/matrix/Debug/mymatrix.obj
-/matrix/matrix/Debug/ml.obj
-/matrix/matrix/Debug/matrix.pch
-/matrix/matrix/Debug/matrix.obj
-/matrix/matrix/Debug/matrix.log
-/matrix/matrix/Debug/matrix.lastbuildstate
-/matrix/matrix/Debug/matrix.Build.CppClean.log
-/matrix/matrix/Debug/matlab.obj
-/matrix/matrix/Debug/exception.obj
-/matrix/matrix/.vscode/launch.json
-/matrix/matrix/.vscode/c_cpp_properties.json
-/matrix/ipch/matrix-ed3d8abd/matrix-f2a09fe1.ipch
-/matrix/Debug/matrix.pdb
-/matrix/Debug/matrix.ilk
-/matrix/Debug/matrix.exe
-/matrix/matrix/Debug/vc.nativecodeanalysis.all.xml
-/matrix/matrix/Debug/test.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/stdafx.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/specialmat.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/mymatrix.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/ml.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/matrix.pch.codeanalysisast
-/matrix/matrix/Debug/matrix.pch.codeanalysis
-/matrix/matrix/Debug/matrix.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/matlab.cpp.nativecodeanalysis.xml
-/matrix/matrix/Debug/exception.cpp.nativecodeanalysis.xml
-/matrix/Debug/matrix.exe.lastcodeanalysissucceeded
-*.sdf
-/Q-learning/Q-learning.v11.suo
-/Q-learning/Q-learning.sln
-/Q-learning/Q-learning/Debug/Q-learning.unsuccessfulbuild
-/Q-learning/Q-learning/Debug/Q-learning.log
-/Q-learning/Q-learning/Debug/Q-learning.lastbuildstate
-/Q-learning/Q-learning/Debug/Q-learning.Build.CppClean.log
-/Q-learning/Q-learning/Q-learning.vcxproj.filters
-/Q-learning/Q-learning/Q-learning.vcxproj
-/Q-learning/Q-learning/Debug/vc110.pdb
-/Q-learning/Q-learning/Debug/vc110.idb
+*.json
