update file strutures

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,35 @@
 ################################################################################
 
 *.json
+*.tlog
+/Debug/vc110.pdb
+/Debug/vc110.idb
+/Debug/vc.nativecodeanalysis.all.xml
+/Debug/test.obj
+/Debug/test.cpp.nativecodeanalysis.xml
+/Debug/stdafx.obj
+/Debug/stdafx.cpp.nativecodeanalysis.xml
+/Debug/specialmat.obj
+/Debug/specialmat.cpp.nativecodeanalysis.xml
+/Debug/mymatrix.obj
+/Debug/mymatrix.cpp.nativecodeanalysis.xml
+/Debug/ml.obj
+/Debug/ml.cpp.nativecodeanalysis.xml
+/Debug/matrix.pch.codeanalysisast
+/Debug/matrix.pch.codeanalysis
+/Debug/matrix.pch
+/Debug/matrix.obj
+/Debug/matrix.log
+/Debug/matrix.lastbuildstate
+/Debug/matrix.cpp.nativecodeanalysis.xml
+/Debug/matrix.Build.CppClean.log
+/Debug/matlab.obj
+/Debug/matlab.cpp.nativecodeanalysis.xml
+/Debug/exception.obj
+/Debug/exception.cpp.nativecodeanalysis.xml
+/matrix.vcxproj.user
+/matrix.vcxproj.filters
+/matrix.vcxproj
+/test/write.csv
+/test/data.csv
+/ReadMe.txt
